--- a/06_Paper/ER-ED/ERED_Stage2/Manuscript_ERED_Stage2.tex
+++ b/06_Paper/ER-ED/ERED_Stage2/Manuscript_ERED_Stage2.tex
@@ -597,10 +597,48 @@ We found a significant effect of strategy (\(F(2.92, 347.65) = 128.47\), \(p < .
 Post-hoc test showed significant higher subjective effort for distraction (\(\eta_{p}^{2}=0.47, [0.42, 1.00]\), \(BF_{10}=\) \(3.61 \times 10^{30}\)), distancing (\(\eta_{p}^{2}=0.41, [0.35, 1.00]\), \(BF_{10}=\) \(1.60 \times 10^{28}\)), and suppression (\(\eta_{p}^{2}=0.30, [0.23, 1.00]\), \(BF_{10}=\) \(1.27 \times 10^{19}\)) compared to active viewing.
 Moreover, we found significantly lower effort during suppression compared with distraction (\(\eta_{p}^{2}=0.08, [0.04, 1.00]\), \(BF_{10}=\) \(1.61 \times 10^{6}\)) and distancing (\(\eta_{p}^{2}=0.03, [0.01, 1.00]\), \(BF_{10}=\) 29.19).
 
+{[}\ldots{} WAHLVERHALTEN FEHLT NOCH \ldots{]}
+
 \hypertarget{subjective-values-of-er-strategies}{%
 \paragraph{Subjective values of ER strategies}\label{subjective-values-of-er-strategies}}
 
-{[}to be filled{]}
+To investigate, which variables can predict individual SVs of ER strategies, a multilevel model approach was chosen.
+The ICC of the null model was \(ICC=\) 0.19, indicating that level-2 predictor subject accounted for 19.10 percent of total variance.
+The preregistered model showed a correlation of \(r=\) 0.95 of the random effects subjects and recoded strategy.
+In addition with the estimation that our model explained 0.90 percent of variance, we assumed our model was overfitted due to inclueding recoded strategy as random slope.
+We therefore set a new model without the recoded strategy as random slope factor, that followed the specification:
+
+\[
+\begin{split}
+SV \sim \text{effort rating} + \text{arousal rating} + \text{utility rating} + corrugator \text{ activity} \\\ + levator \text{ activity} + (1 |subject)
+\end{split}
+\]
+
+\begin{table}[H]
+
+\begin{center}
+\begin{threeparttable}
+
+\caption{\label{tab:TabMLM_H5}Results of multilevel model predicting subjective values of ER strategies.}
+
+\begin{tabular}{lllll}
+\toprule
+Parameter & \multicolumn{1}{c}{Beta} & \multicolumn{1}{c}{$SE$} & \multicolumn{1}{c}{$p$-value} & \multicolumn{1}{c}{Random Effects (SD)}\\
+\midrule
+Intercept & 0.80 & 0.01 & 0.00 & 0.12\\
+Strategy & -0.22 & 0.01 & 0.00 & 0.14\\
+Effort & 0.00 & 0.00 & 0.00 & \\
+Arousal & 0.00 & 0.00 & 0.00 & \\
+Utility & 0.00 & 0.00 & 0.00 & \\
+Corrugator activity & 0.00 & 0.00 & 0.17 & \\
+Levator activity & 0.00 & 0.00 & 0.90 & \\
+\bottomrule
+\end{tabular}
+
+\end{threeparttable}
+\end{center}
+
+\end{table}
 
 \hypertarget{associations-between-subjective-values-and-flexible-er}{%
 \paragraph{Associations between subjective values and flexible ER}\label{associations-between-subjective-values-and-flexible-er}}
@@ -608,8 +646,12 @@ Moreover, we found significantly lower effort during suppression compared with d
 To investigate the ecological validity of the subjective values of ER strategies we calculated, we looked to see if SVs were associated with the actual choice of participants in the choice block.
 Therefore, a \(\chi^{2}\) test with predicted choice (i.e., the strategy with the highest SV of each participant) and actual choice was computed.
 There was a significant association between predicted choice and actual choice (\(\chi^2(4, n = 120) = 115.40\), \(p < .001\), \(\mathrm{BF}_{\textrm{10}} = 1.62 \times 10^{21}\)).
-
-{[} HIER FEHLT NOCH DIE ORDINALE REGRESSION {]}
+We then conducted a ordinal regression with the dependent variable ``choice'' and the individual SVs of all three strategies as independent variables.
+Overall model fit was fair with \(R^{2}=\) 0.27.
+The predictor SV of strategy distraction was found to contribute to the model (\(b = -6.29\), 95\% CI \([-10.81, -3.02]\), \(z = -3.21\), \(p = .001\), \(BF10=\) 2.00).
+The estimated odds ratio indicated a higher chance of choosing strategy distraction, when SV of that strategy is higher.
+Additionally, the predictor SV of strategy suppression was found to contribute to the model (\(b = 2.70\), 95\% CI \([0.83, 4.84]\), \(z = 2.67\), \(p = .008\), \(BF10=\) 1.99).
+The estimated odds ration indicated that is more likely to later choose suppression, when SV of strategy suppression is higher.
 
 Last, we investigated whether SVs are associated with ER flexibility.
 We conducted a logistic regression to inspect whether participants' individual \(slopes\) and \(intercepts\) of ordered SVs could predict their ER flexibility score.
