--- a/06_Paper/COG-ED/Stage 2/Manuscript.Rmd
+++ b/06_Paper/COG-ED/Stage 2/Manuscript.Rmd
@@ -435,6 +435,9 @@ INSERT FIGURE 3 HERE
 
 ```
 
+The rmANOVA on the association between NFC scores and NASA-TLX scores revealed a main effect of *n*-back level (`r apa_print(hypothesis3b_model)$full_result$level`) and an interaction between *n*-back level and NFC scores (`r apa_print(hypothesis3a_model)$full_result$nfcmedian_level`), but no main effect of NFC scores (`r apa_print(hypothesis3a_model)$full_result$nfcmedian`).
+Post-hoc tests showed that the participants with NFC scores below the median had higher NASA-TLX scores for 3-back (`r apa_print(pairs(hypothesis3b_emm_interact))$full_result$X3_High_low`) and for 4-back (`r apa_print(pairs(hypothesis3b_emm_interact))$full_result$X4_High_low`) than those with NFC scores above the median.
+Regardless of NFC scores, NASA-TLX scores were higher for the more difficult level in each pair of *n*-back levels (**Supplement**).
 
 \newpage
 
