--- a/06_Paper/COG-ED/Stage 2/CAD.bib
+++ b/06_Paper/COG-ED/Stage 2/CAD.bib
@@ -913,4 +913,15 @@
   publisher = {American Psychological Association ({APA})},
 }
 
+@Article{Meule2017,
+  author    = {Adrian Meule},
+  journal   = {Frontiers in Psychology},
+  title     = {Reporting and interpreting working memory performance in n-back tasks},
+  year      = {2017},
+  month     = {mar},
+  volume    = {8},
+  doi       = {10.3389/fpsyg.2017.00352},
+  publisher = {Frontiers Media {SA}},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
